<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/deleteFollower"
        android:id="@+id/deleteFollower"/>

    <item android:title="@string/report"
        android:id="@+id/report"
        android:icon="@drawable/ic_report"/>

    <item android:title="@string/delete"
        android:id="@+id/delete"/>

    <item android:title="setting"
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"/>

    <item android:title="@string/editProfile"
        android:id="@+id/editProfile"
        android:icon="@drawable/ic_edit"
        />

    <item android:title="@string/saved"
        android:id="@+id/saved"
        android:icon="@drawable/ic_saved"/>

    <item android:id="@+id/block"
        android:title="@string/block"
        android:icon="@drawable/ic_report" />

    <item android:id="@+id/unblock"
        android:title="@string/unblock"/>

    <item android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"/>


</menu>