<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:id="@+id/verifyAcceptChat"
        android:text="@string/accept"

        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:id="@+id/verifyBlockChat"
        android:text="@string/blockUpper"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:id="@+id/verifyDeleteChat"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/DeleteUpper"/>

</LinearLayout>