<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userlistUsername"
        android:layout_toRightOf="@+id/userlistIcon"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:text="@string/Username"
        android:textSize="18dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userlistIcon"
        android:layout_width="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="60dp"
        android:background="@drawable/app_icon"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/follow"
        android:id="@+id/follow"
        android:textStyle="bold"
        android:textSize="12dp"
        android:background="@drawable/background_trackbutton"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/requested"
        android:id="@+id/requested"
        android:textStyle="bold"
        android:textSize="12dp"
        android:background="@drawable/background_trackbutton"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/following"
        android:id="@+id/followed"
        android:textStyle="bold"
        android:textSize="12dp"
        android:background="@drawable/background_trackbutton"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

</RelativeLayout>