<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.register.fragments.passwordFrag"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/signup_background_transparentwhite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"
            android:text="@string/CreatePassword"
            android:fontFamily="@font/finger_paint"
            android:id="@+id/CreatePassword"
            />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordCritic"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/Password"
            android:padding="15dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:background="@drawable/signup_edittext"/>

        <EditText
            android:id="@+id/confirmPasswordSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordSignUp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/confirmPassword"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="15dp"
            android:background="@drawable/signup_edittext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordCritic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:text="@string/passwordCritics"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/CreatePassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConfirmPassword"
            android:text="@string/confirm"
            android:background="@drawable/background_disabledsignupbutton"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/confirmPasswordSignUp"
            android:enabled="false"
            android:clickable="false"
            android:textAllCaps="false"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>