<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.register.fragments.emailFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="115dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"
            android:text="@string/CreateEmail"
            android:fontFamily="@font/finger_paint"
            android:id="@+id/CreateEmail"
            />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_below="@+id/CreateEmail"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/Email"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:background="@drawable/signup_edittext"
            android:lines="1"/>

        <EditText
            android:id="@+id/confirmEmailSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_below="@+id/emailSignUp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/confirmEmail"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:background="@drawable/signup_edittext"
            android:lines="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConfirmEmail"
            android:text="@string/confirm"
            android:background="@drawable/background_disabledsignupbutton"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/emailSignUp"
            android:enabled="false"
            android:clickable="false"
            android:textAllCaps="false"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>