<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.register.fragments.term_of_policyFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/signup_background_transparentwhite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/ScrollViewTerms">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/title"
                    android:text="@string/privacyPolicy"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/term_of_policy"
                    android:textColor="@color/colorWhite"
                    android:padding="20dp"
                    android:text="@string/term_of_policy"/>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/acceptTermOfPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ScrollViewTerms"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:text="@string/TermOfPolicy_SignUp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CreateAccount"
            android:text="@string/Create_ac"
            android:background="@drawable/background_signupbutton"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/acceptTermOfPolicy"
            android:enabled="true"
            android:clickable="true"
            android:textAllCaps="false"
            android:visibility="visible"/>

    </RelativeLayout>

</FrameLayout>